trunk/Archive/0243724bed66c7d8c6d70275ba07a61e-8dcf59174449f11e872bc3faded12b76/output
+ g++-4.8 -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:5:24: error: deducing from brace-enclosed initializer list requires #include <initializer_list>
     auto a = { 1, 2, 3 };
                        ^
